--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <title>Odin recipes</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style/styles.css">
     </head>
     <body>
         <ul>
-            <li><a href="recipes/recipeone.html">Recipe 1</a></li>
-            <li><a href="recipes/recipetwo.html">Recipe 2</a></li>
-            <li><a href="recipes/recipethree.html">Recipe 3</a></li>
+            <li><a href="recipes/recipeone.html"><img src="img/oatmeal.jpg"></a>
+                <button><a href="recipes/recipeone.html">Recipe 1</a></button></li>
+            <li><a href="recipes/recipetwo.html"><img src="img/muffins.jpg"></a>
+                <button><a href="recipes/recipetwo.html">Recipe 2</a></button></li>
+            <li><a href="recipes/recipethree.html"><img src="img/martini.jpg"></a>
+                <button><a href="recipes/recipethree.html">Recipe 3</a></button></li>
         </ul>
     </body>
 </html>
