--- a/recipes/recipetwo.html
+++ b/recipes/recipetwo.html
@@ -3,10 +3,11 @@
     <head>
         <title>Recipe 2</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style/styles.css">
     </head>
     <body>
         <h1>Banana Muffins</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4471657.jpg&w=1200&h=678&c=sc&poi=face&q=85">
+        <img src="../img/muffins.jpg">
         <h1>Description</h1>
         <p>187 calories; protein: 2.6 g; carbohydrates: 32.3g;</p>
         <h2>Ingredients</h2>
@@ -26,5 +27,6 @@
             <li>Combine bananas, sugar, egg, and melted butter in a large bowl. Fold in flour mixture, and mix until smooth. Scoop into muffin pans.</li>
             <li>Bake in preheated oven. Bake mini muffins for 10 to 15 minutes, and large muffins for 25 to 30 minutes. Muffins will spring back when lightly tapped.</li>
         </ol>
+        <button><a href="../index.html">Back to Home Page</a></button>
     </body>
 </html>
